--- a/www/style.css
+++ b/www/style.css
@@ -51,7 +51,7 @@ span.tv-treeNodeType {
     font-weight: 400;
 }
 
-div#tv-treeSymbolInfo {
+div#tv-symbolInfoView {
     display: flex;
     flex-direction: column;
     gap: 2.5em;
